--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.5
+- Added support for JSON data type columns. The JSON data type appears now as a selectable one in the Export Data dialog for columns (if the advanced option to
+  show all data types is selected). All data operations (Import, Export, Append and Edit) work with the new JSON data type.
 - Added an option to the Advanced Options dialog for Append Data operations, called "Show column data types above column names", that when checked data type
   information for columns on source and target grids of the Append Data dialog is shown. Showing the data types can sometimes aid users when doing manual
   mapping of columns.
