MYSQLEXCEL-246 - [EXPORT] MYSQL4EXCEL NOT EXPORTING BOOL DATA
- Fixed code in the GetMySqlDbType method to include the missing boolean data types. Made a change in the same method to set the default value for bit always to 0 even when it is considered a boolean and removed the no longer necessary bitPrecision parameter. (source\Classes\DataTypeUtilities.cs)
- Wrapped code in InitializeParameters in a try-catch block and if an exception is thrown handle it displaying a friendly message. (source\Classes\DbProcedure.cs, source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1141,4 +1141,7 @@ In order to avoid receiving this error message each time the Excel table is refr
   <data name="UnableToUnlockTablesError" xml:space="preserve">
     <value>Unable to unlock tables.</value>
   </data>
+  <data name="ProcedureParametersInitializationError" xml:space="preserve">
+    <value>Error initializing the stored procedure's parameters.</value>
+  </data>
 </root>
