--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.3.6
+- Fixed code that detects the data type of Excel data for Export and Append Data operations that was broken on the previous version when the JSON data type was
+  initially supported. (Bug #22138966 - [EXPORT] MYSQL4EXCEL NOT EXPORTING BOOL DATA)
+
 1.3.5
 - Added support for JSON data type columns. The JSON data type appears now as a selectable one in the Export Data dialog for columns (if the advanced option to
   show all data types is selected). All data operations (Import, Export, Append and Edit) work with the new JSON data type.
