MYSQLEXCEL-257 - MYSQL FOR EXCEL 1.3.4 (AND 1.3.5): HRESULT: 0X800A03EC UPON "REFRESH ALL"
- Fixed code in the RefreshAllListObjects method to skip ListObjects that have an Excel range as their data source, since executing the Refresh method for those throw a COM exception. (source\Classes\ExcelUtilities.cs)
- Changed the question displayed to users when an exception is thrown by doing a Refresh All, to ask them if they want to continue refreshing Excel objects. (source\Classes\ExcelUtilities.cs, source\Properties\Resources.Designer.cs, source\Properties.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.6
+- Fixed a problem when Refresh All was done so that the Refresh method is not called for Excel ListObjects that have an Excel range as their data source, since
+  that throws a COM Exception. (MySQL Bug #78941, Bug #22110627 - MYSQL FOR EXCEL 1.3.4 (AND 1.3.5): HRESULT: 0X800A03EC UPON "REFRESH ALL")
 - Fixed code that detects the data type of Excel data for Export and Append Data operations that was broken on the previous version when the JSON data type was
   initially supported. (Bug #22138966 - [EXPORT] MYSQL4EXCEL NOT EXPORTING BOOL DATA)
 
