--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.6
+- Added an option to the Advanced Options dialog for Append and Export Data operations, called "Generate an INSERT statement for each data row", which is off
+  by default. When checked an INSERT statement for each data row being appended or exported is generated in the resulting SQL query sent to the MySQL server.
+  When unchecked a single INSERT statement is generated as a bulk data operation, which performs better than multiple INSERT statements.
 - Fixed a problem when Refresh All was done so that the Refresh method is not called for Excel ListObjects that have an Excel range as their data source, since
   that throws a COM Exception. (MySQL Bug #78941, Bug #22110627 - MYSQL FOR EXCEL 1.3.4 (AND 1.3.5): HRESULT: 0X800A03EC UPON "REFRESH ALL")
 - Fixed code that detects the data type of Excel data for Export and Append Data operations that was broken on the previous version when the JSON data type was
