--- a/source/Forms/ExportAdvancedOptionsDialog.resx
+++ b/source/Forms/ExportAdvancedOptionsDialog.resx
@@ -117,11 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="ShowAllDataTypesCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="GenerateMultipleInsertsCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="HelpToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <data name="GenerateMultipleInsertsCheckBox.ToolTip" xml:space="preserve">
+    <value>When checked INSERT statements will be generated for every row being exported.
+This might help determine which row causes an error, since the MySQL Server will process row by row.
+The downside of checking this is performance will be worse than executing a single INSERT statement as a bulk operation.</value>
+  </data>
+  <metadata name="ShowAllDataTypesCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
   <data name="ShowAllDataTypesCheckBox.ToolTip" xml:space="preserve">
     <value>When checked all the allowed MySQL data types will be shown in the Data Type drop-down list.
@@ -177,10 +185,6 @@ This number has a direct impact on the time MySQL for Excel will take on detecti
   <metadata name="AddBufferToVarCharCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <data name="AddBufferToVarCharCheckBox.ToolTip" xml:space="preserve">
-    <value>When checked the columns with a detected data type of Varchar will have an extra padding by rounding up the maximum length detected on the column's pewview data.
-When unchecked the length is not round up and the maximum length detected on the column's preview data is used.</value>
-  </data>
   <metadata name="DetectDatatypeCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
