MYSQLEXCEL-256 - Improve internal handling of mysql data types to use MySqlDataType class
- Renamed the MySqlDataType class to MySqlDisplayDataType, the purpose of this class is to only represent the valid MySQL data types as displayed to users in MySQL for Excel dialogs. (source\Classes\MySqlDisplayType.cs)
- Created the MySqlDataType class to represent an encapsulated MySQL data type that can be queried for its properties and attributes, and that is self validated. This class now contains all functionality related to MySQL data types for better maintainibility. (source\Classes\MySqlDataType.cs, source\MySQL.ForExcel.csproj)
- Moved all data-type related code from the DataTypeUtilities class to the new MySqlDataType one and deleted it. (source\Classes\DataTypeUtilities.cs, source\Classes\MySqlDataType.cs, source\Classes\MySQLDataColumn.cs, source\Classes\MySqlDataRow.cs, source\Classes\MySQLDataTable.cs, source\Classes\MiscUtilities.cs, source\Forms\AppendDataForm.cs, source\Forms\ExportDataForm.cs, source\Forms\EditDataDialog.cs)
- Moved the IsMySqlZeroDateTimeValue and IsReadOnly methods from the DataTypeUtilities to the MySqlDataUtilities class. (source\Classes\MySqlDataUtilities.cs)
- Heavily refactored the MySqlDataColumn class to accomodate for the handling of data types. Added the AutoIncrement and DefaultValue properties to be able to maintain these values from the Export Data dialog. Added warnings for the new AutoIncrement and DefaultValue fields. (source\Classes\MySQLDataColumn.cs)
- Added column properties to the Export Data dialog to support the definition of Auto Increment and Default Value for the new MySQL table where the data will be exported to. Added a context menu to declare a numeric field to be Unsigned or to have Zero Fill, accessible by right-clicking the Data Type combo box.   Added the TimeStamp data type to the full list of valid data types, as it was not being shown before. Added help tooltips to fields in the Export Data dialog that exp

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,10 @@
 - Added an option to the Advanced Options dialog for Append and Export Data operations, called "Generate an INSERT statement for each data row", which is off
   by default. When checked an INSERT statement for each data row being appended or exported is generated in the resulting SQL query sent to the MySQL server.
   When unchecked a single INSERT statement is generated as a bulk data operation, which performs better than multiple INSERT statements.
+- Added column properties to the Export Data dialog to support the definition of Auto Increment and Default Value for the new MySQL table where the data will
+  be exported to. Added a context menu to declare a numeric field to be Unsigned or to have Zero Fill, accessible by right-clicking the Data Type combo box.
+  Added the TimeStamp data type to the full list of valid data types, as it was not being shown before. Added help tooltips to fields in the Export Data dialog
+  that explain in detail how the column properties work in a MySQL database.
 - Fixed a problem when Refresh All was done so that the Refresh method is not called for Excel ListObjects that have an Excel range as their data source, since
   that throws a COM Exception. (MySQL Bug #78941, Bug #22110627 - MYSQL FOR EXCEL 1.3.4 (AND 1.3.5): HRESULT: 0X800A03EC UPON "REFRESH ALL")
 - Fixed code that detects the data type of Excel data for Export and Append Data operations that was broken on the previous version when the JSON data type was
