--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1141,4 +1141,13 @@ In order to avoid receiving this error message each time the Excel table is refr
   <data name="ProcedureParametersInitializationError" xml:space="preserve">
     <value>Error initializing the stored procedure's parameters.</value>
   </data>
+  <data name="ColumnDefaultValueNotValidWarning" xml:space="preserve">
+    <value>Entered default value is not valid for the column's data type.</value>
+  </data>
+  <data name="help" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\help.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ExportIndexesCreatedLastWarning" xml:space="preserve">
+    <value>Advanced option to create indexes after data is exported conflicts with Auto Increment since column must be indexed</value>
+  </data>
 </root>
